--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,7 +5,7 @@ author: Kfir Zohar Ozer <ufkfir@icloud.com>
 homepage: https://github.com/kfirufk/tuxin_tutorial_overlay
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
