--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,15 @@
 name: tuxin_tutorial_overlay
 description: an overlay package that can be used for tutorials and walkthrough
-version: 0.4.3
+version: 0.5.0
 author: Kfir Zohar Ozer <ufkfir@icloud.com>
 homepage: https://github.com/kfirufk/tuxin_tutorial_overlay
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  synchronized: ^2.1.0
-  uuid: ^2.0.1
+  synchronized: ^3.0.0
+  uuid: ^3.0.1
 
   flutter:
     sdk: flutter
