--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  synchronized: ^3.0.0
-  uuid: ^3.0.1
+  synchronized: ^3.0.0+2
+  uuid: ^3.0.6
 
   flutter:
     sdk: flutter
